# DroneSimulation

./: Cargo.toml  README.md
src/: main.rs
src/graph/: graph.rs  parsers.rs  routing.rs
src/math/: vector3.rs
src/transit/: factory.rs  simulation_model.rs  strategy.rs  transit_service.rs
src/transit/entities/: drone.rs  entity.rs  helicopter.rs  human.rs  package.rs  robot.rs
web/: index.html  schedule.html
web/js/: main.js
