[package]
name = "simulation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
rand = "0.8.5"
enum_dispatch = "0.3.11"
